# libbitcoin-consensus

./: .gitignore  CMakeLists.txt  README.md
include/bitcoin/consensus/: export.hpp
src/consensus/: consensus.cpp
test/: CMakeLists.txt  consensus__script_error_to_verify_result.cpp  consensus__script_verify.cpp  consensus__verify_flags_to_script_flags.cpp
